--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 idna==3.4
+mysql-connector==2.2.9
 pip==21.1.2
 requests==2.28.2
 setuptools=57.0.0
